Layout - Correct stretching body content of side modal

--- a/src/Components/Layout/SideModal/SideModal.css
+++ b/src/Components/Layout/SideModal/SideModal.css
@@ -2,7 +2,8 @@
     background-color: white;
     height: 100%;
     max-height: 100%;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
     width: 25%;
     box-sizing: border-box;
     position: relative;
